--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "npm": "7.x",
-    "node": "16.x"
+    "npm": "8.15.0",
+    "node": "16.17.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
