--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "node seeds/seed.js"
   },
   "repository": {
     "type": "git",
